--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                      </div>
                      <div class="divider"></div>
                      <!-- add mony form start -->
-                     <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                     <div class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
@@ -54,6 +54,28 @@
                         </form>
                       </div>
                       <!-- add money form end -->
+                       <!-- cash out start  -->
+                       <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                        <form class="card-body">
+                          <div class="form-control">
+                            <label class="label">
+                              <span class="label-text">Amount</span>
+                            </label>
+                            <input id="input-cash-out" type="text" placeholder="Cash Out Amount" class="input input-bordered" required />
+                          </div>
+                          <div class="form-control">
+                            <label class="label">
+                              <span class="label-text">Pin</span>
+                            </label>
+                            <input id="input-cash-out-pin" type="password" placeholder="Pin" class="input input-bordered" autocomplete="off" required />
+                            
+                          </div>
+                          <div class="form-control mt-6">
+                            <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                          </div>
+                        </form>
+                      </div>
+                        <!-- cash out end -->
 
 
 
@@ -63,6 +85,7 @@
         </div>
     </main>
     <script src="js/home.js"></script>
+    <script src="js/cashOut.js"></script>
 </body>
 
 </html>
